# AVD-E-DIG-2023

pico/adc2dac/: CMakeLists.txt  main.c  pcm5102.c  pcm5102.h  pwm_audio.c  pwm_audio.h  sampler.c  sampler.h
pico/adc2dac/logs/: log2bin.c  sample_1.ods
pico/cmsis-dsp-ex/: CMakeLists.txt  bandpass.c  bandpass.h  ccir476.c  ccir476.h  fir.c  fir.h  main.c  process.c  process.h  streamer.pio
pico/dma_ex/: CMakeLists.txt  main.c
pico/dma_ex2/: CMakeLists.txt  main.c
pico/dma_streamer/: CMakeLists.txt  main.c  streamer.pio
pico/fft_ex/: CMakeLists.txt  main.c
pico/frac_div/: CMakeLists.txt  main.c
pico/glitch_filter/: CMakeLists.txt  main.c
pico/hello_world/: CMakeLists.txt  main.c
pico/hello_world_2350/: CMakeLists.txt  main.c
pico/knikkerbaan/: CMakeLists.txt  main.c  servo.c  servo.h
pico/mcp2515_ex/: CMakeLists.txt  main.c  mcp2515.c  mcp2515.h  mcp2515_regs.h
pico/mcp2515_ex/media/: mcp2515_can_errors.mov  mcp2515_can_terminal.MOV  mcp2515_scoop.mov
pico/mixer_2350/: 20250610.txt  CMakeLists.txt  main.c  nco.pio
pico/nco_2350/: CMakeLists.txt  main.c  nco.pio
pico/nvic_alarm/: CMakeLists.txt  main.c
pico/nvic_gpio/: CMakeLists.txt  main.c
pico/pio_ex/: CMakeLists.txt  main.c  pwm.pio
pico/pwm_ex/: CMakeLists.txt  main.c
pico/sdcard_ex/: CMakeLists.txt  common.h  config.c  config.h  main.c
pico/sitor-b/: CMakeLists.txt  ccir476.c  main.c
pico/spi_ex/: CMakeLists.txt  main.c
pico/spi_max7219/: CMakeLists.txt  font.c  main.c  max7219_ex_text.mov
pico/spi_max7219_7seg/: CMakeLists.txt  main.c
pico/stepper_ex/: CMakeLists.txt  main.c
pico/udp_ex/: CMakeLists.txt  artnet.c  artnet.h  main.c  ws2812.h  ws2812.pio
pico/web-ex/: CMakeLists.txt  fs_data.c  lwipopts.h  main.c
pico/web-ex/web/pages/: index.html
pico/ws2811_ex/: CMakeLists.txt  main.c  ws2812.c  ws2812.h
